# Lockdin

./: .gitignore  LICENSE  README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  resume.py  student.py
apps/api/app/routers/: health.py  resume.py
apps/api/app/schemas/: resume.py
apps/api/app/services/: embeddings.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: f1657ab88b85_init_tables.py
infra/: .env.example  docker-compose.yml
