[project]
name = "lockedin_api"
version = "0.1.0"
description = "Backend API for the Career Intelligence Platform (FastAPI + Postgres + pgvector)"
authors = [{ name = "Yuvam Bh" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "SQLAlchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "alembic==1.13.2",
    "httpx==0.27.2",
    "openai==1.51.0",
    "tenacity==8.5.0",
    "python-multipart==0.0.9",
    "pgvector==0.2.5"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"